# codex

./: .gitignore  A2A-OPTIMIZATION-COMPLETE.md  A2A-OPTIMIZATION-FINAL-REPORT.md  CLAUDE.md  Documentação do Projeto A2A Hello World.md  GEMINI.md  Projeto A2A Hello World.md  README-A2A-OPTIMIZED.md  README.md  __main__.py  a2a_hello_world_architecture.md  a2a_protocol_principles.md  a2a_python_tutorial_intro.md  a2a_python_tutorial_setup.md  a2a_python_tutorial_skills_card.md  agent_executor.py  client.py  monitor_logs.sh  package-lock.json  package.json  pasted_content.txt  requirements.txt  start_agents.sh  test_client.py  todo.md
.claude/: config.json
backup-reorganized/active-prototypes/analytics/: __main__.py  agent.py  agent_executor.py  agent_executor_backup.py  pyproject.toml  test_chart_generator.py
backup-reorganized/active-prototypes/analytics/agent_cards/: chart_generator_agent.json
docs/: A2A-ARCHITECTURE.md  A2A-MIGRATION-GUIDE.md  A2A-POSTGRESQL-INTEGRATION.md  A2A-UNIFIED-SYSTEM.md  A2A_MCP_SERVER_STATUS.md  A2A_SERVERS_PORT_MANAGEMENT.md  AGENTE-AUTO-COMMIT.md  AGENTES_REMOVIDOS.md  CLAUDE_FLOW_A2A_ORCHESTRATOR.md  COMPARACAO.md  CONFIGURACAO_COMPLETA.md  CONTAINERS-ESPECIALIZADOS.md  CORRECAO_A2A_COMPLETA.md  ENHANCED-MONITOR-GUIDE.md  ENHANCED-MONITOR-SUMMARY.md  ESTRUTURA-ORGANIZADOR-COMPLETA.md  ESTRUTURA_1.md  ESTRUTURA_2.md  EXECUTAR_SISTEMA.md  FLUXO_REGISTRO_TAREFAS_COMPLETAS.md  GUARDIAN-SISTEMA-COMPLETO.md  GUIA_COMPLETO_PARA_LEIGOS.md  HYBRID_MEMORY_SYSTEM.md  INSTALL-MCP-SEM-ERRO.md  INTEGRACAO-MCP-GENERICA.md  INTEGRACAO_COMPLETA_UI.md  (+16 more)
(+129 files in other folders)
